<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/bg_bottom_sheet">

    <TextView
        android:id="@+id/txtTitleDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_gray_dark"
        tools:text="@string/message"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/main_green"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?actionBarDivider"
        android:backgroundTint="@color/main_green"/>

    <TextView
        android:id="@+id/txtMessageDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:background="@drawable/bg_btn_gray_dark"
        tools:text="@string/message"
        android:textAlignment="center"
        android:textColor="@color/main_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_btn_green"
            app:backgroundTint="@null"
            android:textColor="@color/main_black"
            android:textSize="18sp"
            android:text="@string/cancel"
            android:layout_marginHorizontal="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOK"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_btn_green"
            android:textSize="18sp"
            app:backgroundTint="@null"
            android:textColor="@color/main_black"
            android:layout_marginHorizontal="20dp"
            android:text="@string/confirm"/>

    </LinearLayout>



</LinearLayout>