<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:paddingBottom="20dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/main_black"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_custom"
            android:padding="16dp">

            <TextView
                android:id="@+id/exerciseName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_green"
                android:textSize="24sp"
                tools:text="@string/exercise"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/muscleName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_gray"
                tools:text="@string/muscle"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exerciseName"/>

            <TextView
                android:id="@+id/rest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_gray"
                tools:text="@string/rest"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/muscleName"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEditSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_open"
                android:textColor="@color/main_green"
                android:textSize="18sp"
                app:backgroundTint="@color/main_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>