<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo_light_transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbarTop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/toolbar_top_border_custom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/routines"
                    android:textColor="@color/main_green"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/btnLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:padding="16dp"
                    android:src="@drawable/ic_logout"
                    android:layout_gravity="end"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabsRoutines"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/main_black"
                android:elevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
                app:tabIndicatorColor="@color/main_green"
                app:tabMode="scrollable"
                app:tabTextColor="@color/main_gray" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabDeleteRoutine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/bg_btn_gray_dark"
                android:src="@drawable/ic_delete"
                android:tooltipText="@string/delete_routine"
                android:visibility="invisible"
                app:backgroundTint="@color/main_gray_dark"
                app:tint="@color/main_red"
                tools:layout_editor_absoluteX="340dp"
                tools:layout_editor_absoluteY="57dp"
                tools:visibility="visible" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabNewRoutine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/bg_btn_gray_dark"
                    app:backgroundTint="@color/main_gray_dark"
                    tools:visibility="visible"
                    app:tint="@color/main_green"
                    android:src="@drawable/ic_add"
                    android:tooltipText="@string/new_routine"
                    tools:layout_editor_absoluteX="340dp"
                    tools:layout_editor_absoluteY="57dp" />

            </LinearLayout>


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPagerRoutine"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/newRoutineDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:background="@drawable/bg_btn_gray_dark"
            android:visibility="invisible"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titleDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/new_routine"
                android:textColor="@color/main_green"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editNewRoutineDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:backgroundTint="@color/main_green"
                android:inputType="text"
                android:paddingBottom="15dp"
                android:textColor="@color/main_gray"
                android:textColorHint="@color/main_black"
                android:hint="@string/monday"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleDialog" />

            <Button
                android:id="@+id/btnCancelNewRoutineDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_gray_dark"
                android:text="@string/cancel"
                android:textColor="@color/main_green"
                android:textSize="18sp"
                android:padding="20dp"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toStartOf="@+id/btnOkNewRoutineDialog"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editNewRoutineDialog" />

            <Button
                android:id="@+id/btnOkNewRoutineDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:background="@drawable/bg_btn_gray_dark"
                android:text="@string/confirm"
                android:textColor="@color/main_green"
                android:textSize="18sp"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnCancelNewRoutineDialog"
                app:layout_constraintTop_toBottomOf="@+id/editNewRoutineDialog" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabNewExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:clickable="true"
            android:src="@drawable/ic_add"
            android:visibility="invisible"
            android:tooltipText="@string/new_exercise"
            tools:visibility="visible"
            app:tint="@color/main_black"
            app:backgroundTint="@color/main_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>